5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1671_1105.log
== TEST (2019-04-24 15:22:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input(" winter is coming: ")

print("Entradas: ", brasao)
-- OUTPUT:
Entradas:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:34:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == lobo ):
	print( "Casa: Stark" )
elif ( brasao == leao ):
	print( "Casa: Lannister" )
elif ( brasao == veado ):
	print( "Casa: Baratheon" )
elif ( brasao == dragao ):
	print("Casa: Tartaryen")
elif ( brasao == rosa ):
	print("Casa: Tyrell")
elif ( brasao == sol ):
	print("Casa: Martell")
elif ( brasao == lula ):
	print("Casa: Greyjoy")
elif ( brasao == esfolado ):
	print("Casa: Bolton")
elif ( brasao == turta ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.140658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 8, in <module>
    if ( brasao == lobo ):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:34:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == lobo ):
	print( "Casa: Stark" )
elif ( brasao == leao ):
	print( "Casa: Lannister" )
elif ( brasao == veado ):
	print( "Casa: Baratheon" )
elif ( brasao == dragao ):
	print("Casa: Tartaryen")
elif ( brasao == rosa ):
	print("Casa: Tyrell")
elif ( brasao == sol ):
	print("Casa: Martell")
elif ( brasao == lula ):
	print("Casa: Greyjoy")
elif ( brasao == esfolado ):
	print("Casa: Bolton")
elif ( brasao == turta ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if ( brasao == lobo ):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:35:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == leao ):
	print( "Casa: Lannister" )
elif ( brasao == veado ):
	print( "Casa: Baratheon" )
elif ( brasao == dragao ):
	print("Casa: Tartaryen")
elif ( brasao == rosa ):
	print("Casa: Tyrell")
elif ( brasao == sol ):
	print("Casa: Martell")
elif ( brasao == lula ):
	print("Casa: Greyjoy")
elif ( brasao == esfolado ):
	print("Casa: Bolton")
elif ( brasao == turta ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    elif ( brasao == leao ):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:36:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.166383
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entradas:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entradas:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entradas:  dragao
Casa: Tartaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:37:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " )

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.185456
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entradas:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entradas:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entradas:  dragao
Casa: Tartaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:37:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:38:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Tartaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:39:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Targaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.143707
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entradas:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entradas:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entradas:  dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entradas: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Targaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entradas:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:40:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entrada: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Targaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.167656
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:41:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input( "Winter is coming: " ).lower()

print( "Entrada: ", brasao )

if ( brasao == "lobo" ):
	print( "Casa: Stark" )
elif ( brasao == "leao" ):
	print( "Casa: Lannister" )
elif ( brasao == "veado" ):
	print( "Casa: Baratheon" )
elif ( brasao == "dragao" ):
	print("Casa: Targaryen")
elif ( brasao == "rosa" ):
	print("Casa: Tyrell")
elif ( brasao == "sol" ):
	print("Casa: Martell")
elif ( brasao == "lula" ):
	print("Casa: Greyjoy")
elif ( brasao == "esfolado" ):
	print("Casa: Bolton")
elif ( brasao == "turta" ):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.166213
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
